--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
-/.idea
-/.vscode
-/vendor
-.DS_Store
+/vendor/
+node_modules/
 composer.lock
-test.php
+.phpunit.result.cache
+phpunit.xml
+coverage/
+.idea/
+.vscode/
+*.swp
+.DS_Store
+Thumbs.db
+*.log
+.cache/
+.tmp/
+dist/
+build/
+.env
+.env.*
