--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,32 @@
-* text=auto
+* text=auto eol=lf
 
 *.html diff=html
 *.md diff=markdown
 *.php diff=php
 
-.editorconfig export-ignore
-.gitattributes export-ignore
-.gitignore export-ignore
-readme.md export-ignore
+/.github            export-ignore
+/.gitignore         export-ignore
+/.gitattributes     export-ignore
+/.editorconfig      export-ignore
+/.vscode            export-ignore
+/.idea              export-ignore
+/tests              export-ignore
+/coverage           export-ignore
+/phpunit.xml        export-ignore
+/phpunit.xml.dist   export-ignore
+/phpstan.neon       export-ignore
+/phpstan.neon.dist  export-ignore
+/psalm.xml          export-ignore
+/psalm.xml.dist     export-ignore
+/pint.json          export-ignore
+/rector.php         export-ignore
+/docker-compose.yml export-ignore
+/Dockerfile         export-ignore
+/.docker            export-ignore
+/build              export-ignore
+/dist               export-ignore
+/docs               export-ignore
+/examples           export-ignore
+/styleci.yml        export-ignore
+/composer.lock      export-ignore
+/extra              export-ignore
