--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,25 @@
         "ext-json": "*",
         "guzzlehttp/guzzle": "^7.10"
     },
+    "require-dev": {
+        "pestphp/pest": "^4.1",
+        "symfony/var-dumper": "^7.4",
+        "vlucas/phpdotenv": "^5.6"
+    },
     "autoload": {
         "psr-4": {
             "pdeans\\Miva\\Api\\": "src/"
         }
     },
     "config": {
-		"sort-packages": true
+		"sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
 	},
+    "scripts": {
+        "test": "pest"
+    },
     "minimum-stability": "stable",
     "prefer-stable": true
 }
