Dev autoload tests namespace

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,11 @@
             "pdeans\\Miva\\Api\\": "src/"
         }
     },
+    "autoload-dev": {
+		"psr-4": {
+			"Tests\\": "tests/"
+		}
+	},
     "config": {
 		"sort-packages": true,
         "allow-plugins": {
