Additional request builder, auth, and live ssh tests

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,11 @@ MIVA_API_HTTP_VERIFY=true
 
 # Optional JSON map of additional headers, e.g. {"X-Debug":"1","Connection":"close"}
 MIVA_API_HTTP_HEADERS=
+
+# SSH authentication
+MIVA_API_SSH_USERNAME="ssh-user"
+MIVA_API_SSH_ALGORITHM="sha256"
+# Path to a local private key file (required for SSH-auth tests)
+MIVA_API_SSH_PRIVATE_KEY_PATH="~/.ssh/id_rsa"
+# Set to true to run the live SSH-authenticated test (otherwise skipped)
+MIVA_API_SSH_LIVE=false
