--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ MIVA_API_HTTP_HEADERS=
 # SSH authentication
 MIVA_API_SSH_USERNAME="ssh-user"
 MIVA_API_SSH_ALGORITHM="sha256"
-# Path to a local private key file (required for SSH-auth tests)
-MIVA_API_SSH_PRIVATE_KEY_PATH="~/.ssh/id_rsa"
+# Path to a local private key file
+MIVA_API_SSH_PRIVATE_KEY_PATH=
 # Set to true to run the live SSH-authenticated test (otherwise skipped)
 MIVA_API_SSH_LIVE=false
