Added agents file

--- a/.gitattributes
+++ b/.gitattributes
@@ -31,3 +31,4 @@
 /composer.lock      export-ignore
 /extra              export-ignore
 /CHANGELOG.md       export-ignore
+/AGENTS.md          export-ignore
